--- a/2 - Structures conditionnelles et boucles.ipynb
+++ b/2 - Structures conditionnelles et boucles.ipynb
@@ -204,9 +204,9 @@
         "\n",
         "Python vous permet d'utiliser des opérateurs logiques pour créer des conditions plus complexes. Voici quelques opérateurs courants :\n",
         "\n",
-        "Opérateur logique and\n",
-        "Opérateur logique or\n",
-        "Opérateur logique not\n",
+        "* Opérateur logique **and**\n",
+        "* Opérateur logique **or**\n",
+        "* Opérateur logique **not**\n",
         "\n",
         "**1. Exemple avec and**"
       ]
