--- a/5- Built-in Functions.ipynb
+++ b/5- Built-in Functions.ipynb
@@ -15,7 +15,7 @@
         "id": "VVszUmwz-bFM"
       },
       "source": [
-        "# Functions\n",
+        "# Built-in Functions\n",
         "Python est un langage de programmation qui offre un large éventail de fonctions intégrées (built-in functions) pour simplifier le développement. Ces fonctions sont toujours disponibles et peuvent être utilisées sans avoir besoin d'importer des modules supplémentaires. Voici une présentation détaillée des principales fonctions intégrées de Python, y compris des exemples d'utilisation pour chacune d'elles.\n",
         "\n",
         "- Fonctions de bases : **abs(), round(), max(), min(), len(), sum(), any(), all()**\n",
@@ -54,8 +54,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "5\n",
             "3.14\n",
@@ -94,8 +94,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "3.14\n",
             "2.7\n",
@@ -138,8 +138,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "5\n",
             "1\n",
@@ -188,8 +188,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "5\n",
             "6\n",
@@ -232,8 +232,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "15\n",
             "7.5\n",
@@ -278,8 +278,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "True\n",
             "False\n",
@@ -325,8 +325,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "123\n",
             "12\n",
@@ -369,8 +369,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "123\n",
             "3.14\n",
@@ -413,8 +413,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "3.14\n",
             "10.0\n"
@@ -453,8 +453,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "<class 'int'>\n",
             "<class 'str'>\n",
@@ -506,8 +506,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "['P', 'y', 't', 'h', 'o', 'n']\n",
             "[1, 2, 3]\n",
@@ -550,8 +550,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(1, 2, 3)\n",
             "('P', 'y', 't', 'h', 'o', 'n')\n"
@@ -611,14 +611,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "str"
             ]
           },
+          "execution_count": 20,
           "metadata": {},
-          "execution_count": 20
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -650,8 +650,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0b1010\n",
             "0b11111111\n"
@@ -687,8 +687,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0o12\n",
             "0o377\n"
@@ -724,8 +724,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "0xa\n",
             "0xff\n"
@@ -761,8 +761,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Bonjour, Alice. Vous avez 30 ans.\n",
             "Le double de 5 est 10.\n"
@@ -807,8 +807,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Quel est votre nom ? Doowensky\n",
             "Bonjour, Doowensky!\n"
@@ -851,8 +851,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Bonjour, monde!\n"
           ]
@@ -902,8 +902,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Bonjour, monde!\n"
           ]
@@ -916,6 +916,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "A47vSAPEQvOt"
+      },
       "source": [
         "## Exercice Complet : Gestion d'une Liste de Notes d'Étudiants\n",
         "Créer un programme Python qui gère une liste de notes d'étudiants. Le programme doit permettre à l'utilisateur d'ajouter des notes, de les manipuler, et d'enregistrer les résultats dans un fichier.\n",
@@ -943,10 +946,7 @@
         "5. **Lecture des Résultats :**\n",
         "\n",
         "* Ouvrez le fichier resultats.txt en mode lecture et affichez son contenu."
-      ],
-      "metadata": {
-        "id": "A47vSAPEQvOt"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -960,8 +960,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Combien d'étudiants ? 3\n",
             "Entrez la note de l'étudiant 1 : 15\n",
